@@ -20,6 +20,7 @@ Version 1.0.8
      * KLoneC (Mickael Auger)
      * KLoneC++ (Mickael Auger)
      * Xorg configuration (milian)
+  -  Fixed HTML comments spawning multiple lines producing invalid XHTML output (SF#1738173, BenBE)
   -  Added support for multichar string delimiters (SF#1932083, BenBE)
   -  Added support for parameters beginning with dash in BASH language (BenBE)
   -  Fixed problems of unfinished strings and comments producing invalid XHTML (SF#1996353, BenBE)
